# enigma-machine

./: CMakeLists.txt
include/enmach/: EnigmaMachine.hpp  Reflector.hpp  Rotor.hpp  enmach.hpp  utils.hpp
test/src/: enigma_m4_test.cpp
